<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_addcontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_add_word_content_fragment"
            android:id="@+id/tv_title_edit_fragment"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/text_save_add"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/add_word_character"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_char_add_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="A"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:text="@string/words_title_of_edit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_editext"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/edt_words"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:hint="@string/hint_add_words"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:text="@string/title_add_word_meaning"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_editext"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/edt_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@null"
                    android:gravity="start"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:text="@string/title_addword_photo"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ln_select_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border_select_phot">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_gallery"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:text="@string/text_select_photo"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/img_delete_photo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_close_search"
                    android:visibility="gone"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/img_photo_add_words"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>